# simplecc

./: .gitignore  .simplecc-apply-concurrency.py  .simplecc-apply-latest-wins.py  .simplecc-apply-v4.py  .simplecc-completion-v4.patch  .simplecc-release-registry-guards.py  Cargo.toml  README.md  install.sh  simplecc.json.example
.claude/: settings.local.json.tmp.923315.782b53825b34
.github/workflows/: apply-completion-v4.yml  apply-concurrent-lsp-dispatch.yml  apply-latest-wins-completion.yml  ci.yml  release-registry-guards.yml
autoload/: simplecc.vim
doc/: simplecc.txt
plugin/: simplecc.vim
src/simplecc/: config.rs  installer.rs  registry.rs  simplecc_daemon.rs  workspace_watcher.rs
src/simplecc/lsp/: client.rs  mod.rs  transport.rs  types.rs
test/: fake_daemon.sh  vim9_smoke.vim
tests/: daemon_protocol.rs
