[package]
name = "simplecc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simplecc-daemon"
path = "src/simplecc/simplecc_daemon.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "process", "fs", "time"] }
lsp-types = "0.97"
anyhow = "1"
which = "6"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
flate2 = "1"
tar = "0.4"
zip = "2"
futures-util = "0.3"
dirs = "5"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
